_etc/traefik-forward-auth/004-deployment.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: api-gateway-system
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
      - name: traefik-forward-auth
        image: thomseddon/traefik-forward-auth:2
        ports:
        - containerPort: 4181
          protocol: TCP
          name: http
